Fix CSS for Safari (gap)

--- a/stylesheets/default.scss
+++ b/stylesheets/default.scss
@@ -114,12 +114,20 @@ body {
         display: flex;
         align-items: start;
         flex-wrap: wrap;
-        gap: 12px;
-        padding-top: 6px;
+        padding: 5px 0;
+        line-height: 1;
 
-        a img {
-          width: 170px;
-          height: 170px;
+        /* gap: 12px;  does not work in safari at the moment, using margin as a workaround */
+        margin-left: -12px;
+        margin-top: -12px;
+        a {
+          margin-left: 12px;
+          margin-top: 12px;
+
+          img {
+            width: 170px;
+            height: 170px;
+          }
         }
       }
     }
